@@ -157,9 +157,7 @@ union rpmDataType_u {
 /** \ingroup header
  */
 typedef uint32_t *	hTAG_t;
-typedef rpmTagType *	hTYP_t;
 typedef rpmTagData *	hPTR_t;
-typedef rpmTagCount *	hCNT_t;
 
 /** \ingroup header
  */
@@ -536,9 +534,9 @@ typedef
  */
 typedef
 int (*HDRext) (Header h, uint32_t tag,
-			/*@null@*/ /*@out@*/ hTYP_t type,
+			/*@null@*/ /*@out@*/ rpmTagType * type,
 			/*@null@*/ /*@out@*/ hRET_t * p,
-			/*@null@*/ /*@out@*/ hCNT_t c)
+			/*@null@*/ /*@out@*/ rpmTagCount * c)
 	/*@modifies *type, *p, *c @*/;
 
 /** \ingroup header
@@ -556,9 +554,9 @@ int (*HDRext) (Header h, uint32_t tag,
  */
 typedef
 int (*HDRget) (Header h, uint32_t tag,
-			/*@null@*/ /*@out@*/ hTYP_t type,
+			/*@null@*/ /*@out@*/ rpmTagType * type,
 			/*@null@*/ /*@out@*/ hRET_t * p,
-			/*@null@*/ /*@out@*/ hCNT_t c)
+			/*@null@*/ /*@out@*/ rpmTagCount * c)
 	/*@modifies *type, *p, *c @*/;
 
 /** \ingroup header
@@ -719,9 +717,9 @@ HeaderIterator (*HDRinititer) (Header h)
 typedef
 int (*HDRnextiter) (HeaderIterator hi,
 		/*@null@*/ /*@out@*/ hTAG_t tag,
-		/*@null@*/ /*@out@*/ hTYP_t type,
+		/*@null@*/ /*@out@*/ rpmTagType * type,
 		/*@null@*/ /*@out@*/ hRET_t * p,
-		/*@null@*/ /*@out@*/ hCNT_t c)
+		/*@null@*/ /*@out@*/ rpmTagCount * c)
 	/*@modifies hi, *tag, *type, *p, *c @*/;
 
 /** \ingroup header
